# ml_EMT_synthesis

./: .gitignore  EMT_raw-data.xlsx  README.md
Dataset/: EMT.csv
Experimentally_Verified_Synthesis/: R_fill.csv  R_fill.ipynb
External Validation/: EMT_Finals.xlsx  EMT_PCA_result.xlsx  EMT_PCA_transformed_only.xlsx  EMT_Step1.xlsx  EMT_Step2.xlsx  EMT_duplicated_transformed.xlsx  EMT_filtered_with_distances.xlsx  Fig.ipynb  Table_S6_expanded.xlsx  Untitled.ipynb
External_Validation/: Data.ipynb  Fig.ipynb  Lit.ipynb  Table_S6_updated.csv  Table_S6_updated.xlsx
Filtered_dataset/: Filtered_original_space.csv  Filtered_original_space.xlsx
Model Benchmark/dataset/: last_backup_processed_dataset.csv
Model Benchmark/examples/: binary_entire_grid_search_and_train.py
Model_Benchmark/: pyproject.toml
Model_Benchmark/dataset/: processed_dataset.csv  zeolites_dataset.csv
Model_Benchmark/examples/: cleaning_and_featurization.py  params.yaml  visualization_and_analysis.py
Model_Benchmark/src/zeolite_emt/: data_transformation.py  train_classifier.py
Prediction for Experimentally Verified Synthesis/: PCA_fill.xlsx  PCA_fill_distance.xlsx  R_fill.xlsx  R_fill_1.xlsx  fill.xlsx  pca_fill.pkl  pca_fill_final.xlsx  pca_fill_final_1.xlsx  pca_fill_final_2.xlsx  pca_fill_inv_pca.xlsx  pca_fill_prob.xlsx  scaled_data_pca_fill.xlsx  scaler_model.pkl
dataset/: EMT_data.csv
